user role attaching logic is made